[package]
name = "vocajeux"
version = "0.1.0"
authors = ["Maarten van Gompel <proycon@anaproy.nl>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
serde = "1.0"
serde_json = "1.0.33"
serde_derive = "1.0"
csv = "1.0.7"
md5 = "0.6.1"
rand = "0.3"
regex = "1.1.0"
ansi_term = "0.11"
dirs = "1.0.4"
actix-web = "0.7"
